fix expander hidden, fix visibility in recursive tree, fix focus outline

--- a/src/components/warp-view-plot/warp-view-plot.scss
+++ b/src/components/warp-view-plot/warp-view-plot.scss
@@ -69,4 +69,8 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
+
+  #focusablePlotDiv:focus {
+    outline: none;
+  }
 }
